Add am and iam resources